# async-dex-parser

./: .gitignore  .pre-commit-config.yaml  CLI_parse_chapter.py  LICENSE  Makefile  README.md  config.py  example.bat  headers.py  main.py  parse_chapter.py  parse_title.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
app/: __main__.py  cli.py  common.py  config.py  headers.py  logger_setup.py
app/actions/: chapter_actions.py  fav_actions.py  title_actions.py
app/chapter_parser/: __init__.py  image_downloader.py  parse_chapter.py
app/handlers/: chapter_actions.py  fav_actions.py  title_actions.py
app/title_parser/: __init__.py  parse_title.py  parse_title_name.py  select_chapters.py
dex_parser/: __init__.py  __main__.py  cli.py  common.py  config.py  errors.py  headers.py  help.py  logger_setup.py
dex_parser/actions/: chapter_actions.py  fav_actions.py  title_actions.py
dex_parser/chapter_parser/: __init__.py  factory.py  image_downloader.py  models.py  parse_chapter.py
dex_parser/commands/: chapter.py  favorite.py  favourite_list.py  title.py
dex_parser/dex_api/: __init__.py  base.py  chapter.py  interface.py  title.py
dex_parser/downloader/: __init__.py  base_image_downloader.py  image_downloader.py
dex_parser/title_parser/: __init__.py  chapter_selector.py  factory.py  models.py  parse_title.py  parse_title_name.py  select_chapters.py  title_name_parser.py  title_parser.py
pyoxidizer_builder/: Makefile  pyoxidizer.bzl
