[project]
name = "dex_parser"
version = "1.0.4"
authors = [{name="likeilife"}]
description = "Async mangadex parser. Can parse one chapter, all chapter from title etc."
readme = "README.md"
requires-python = ">=3.10.3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
"aiofiles >= 22.1.0",
"jmespath >= 1.0.1",
"tqdm >= 4.64.1",
"tabulate >= 0.9.0",
"httpx >= 0.23.3",
]

[project.urls]
"Homepage" = "https://github.com/likeinlife/async-dex-parser"

[tool.setuptools]
py-modules = ["dex_parser"]