[project]
name = "dex_parser"
version = "1.0.4"
authors = [{name="likeinlife"}]
description = "Async mangadex parser. Can parse one chapter, all chapter from title etc."
readme = "README.md"
requires-python = ">=3.10.3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
"aiofiles >= 22.1.0",
"jmespath >= 1.0.1",
"tqdm >= 4.64.1",
"tabulate >= 0.9.0",
"httpx >= 0.23.3",
"pydantic == 2.4.2" ,
"pydantic-settings == 2.0.3",
]

[project.urls]
"Homepage" = "https://github.com/likeinlife/async-dex-parser"

[tool.setuptools]
py-modules = ["dex_parser"]

[project.optional-dependencies]
dev = [
    "ruff==0.1.5",
    "mypy==1.2.0",
    "pre-commit==3.5.0",
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
