[tool.poetry]
name = "dex_parser"
version = "0.1.0"
description = "Mangadex chapter parser"
authors = ["likeinlife <likeinlife@outlook.com>"]
readme = "README.md"

[tool.poetry.group.dev]
optional = true

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^23.2.1"
jmespath = "^1.0.1"
tqdm = "^4.66.1"
tabulate = "^0.9.0"
httpx = "^0.26.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.1.14"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 120
exclude = ["__init__.py", "venv"]
select = ["F", "E", "W", "C", "I", "N", "S"]
extend-select = ["D202",]
ignore = ["W191", "E101", "S501"]

[tool.ruff.format]
quote-style = "single"

